# CocklinPP

./: CMakeLists.txt  README.md  main.cpp
lang/: Array.h  AutoReference.h  Bool.cpp  Bool.h  Object.cpp  Object.h  String.cpp  String.h  declarations.h  typesStub.h
native/: Helpers.cpp  Helpers.h
